--- a/src/frontend/langs/ja-JP.json
+++ b/src/frontend/langs/ja-JP.json
@@ -95,7 +95,19 @@
 		"description2": "ハッシュタグ #misshaialert は、テンプレートに関わらず自動付与されます。",
 		"default": "昨日のMisskeyの活動は\n\nノート: {notesCount}({notesDelta})\nフォロー : {followingCount}({followingDelta})\nフォロワー :{followersCount}({followersDelta})\n\nでした。\n{url}",
 		"insertVariables": "変数を挿入する",
-		"insertVariablesHelp": "{ } で囲われた文字列は変数と呼ばれ、特別な意味を持ちます。これを含めると、投稿時に自動的に値が埋め込まれます。"
+		"insertVariablesHelp": "{ } で囲われた文字列は変数と呼ばれ、特別な意味を持ちます。これを含めると、投稿時に自動的に値が埋め込まれます。",
+		"_variables": {
+			"notesCount": "ノート数",
+			"followingCount": "フォロー数",
+			"followersCount": "フォロワー数",
+			"notesDelta": "ノート数の前日比",
+			"followingDelta": "フォロー数の前日比",
+			"followersDelta": "フォロワー数の前日比",
+			"url": "本サイトのURL",
+			"username": "アカウントのユーザー名",
+			"host": "アカウントの所属ホスト名",
+			"rating": "レート"
+		}
 	},
 	"_error": {
 		"sorry": "問題が発生しました。お手数ですが、やり直してください。",
