--- a/src/frontend/langs/ja-JP.json
+++ b/src/frontend/langs/ja-JP.json
@@ -55,9 +55,7 @@
 	},
 	"_missHai": {
 		"ranking": "ミス廃ランキング",
-		"rankingDescription1": "ユーザーの「みす廃レート」を算出し、高い順にランキング表示しています。みす廃レートは、次のような条件で算出されます。",
-		"rankingFormula": "(ノート数) / (アカウント登録からの経過日数)",
-		"rankingDescription2": "廃人を極めるか、ノート数を控えるか、全てあなた次第！",
+		"rankingDescription": "ユーザーの「みす廃レート」を算出し、高い順にランキング表示しています。",
 		"showAll": "全員分見る",
 		"data": "みす廃データ",
 		"dataBody": "内容",
