ようこそページの大改修

--- a/src/frontend/langs/ja-JP.json
+++ b/src/frontend/langs/ja-JP.json
@@ -1,7 +1,7 @@
 {
 	"title": "Misskey Tools",
-	"description1": "Misskeyは楽しいものです。気がついたら1日中入り浸っていることも多いでしょう。",
-	"description2": "さあ、今すぐMisskey Toolsをインストールして、あなたの活動を把握しよう。",
+	"description1": "Misskeyをもっと効果的に。様々な機能を持ったオールインワンツール。",
+	"description2": "お使いのインスタンスURLを入力して、今すぐMisskey Toolsを使おう！",
 	"notes": "ノート",
 	"following": "フォロー",
 	"followers": "フォロワー",
@@ -48,6 +48,15 @@
 		"pattern5": "息するように Misskey、そんなあなたへ。",
 		"pattern6": "あなたは真の Misskey 廃人ですか？"
 	},
+	"_welcome": {
+		"title": "プロ仕様のツールキット",
+		"description": "Misskey Toolsでは、Misskeyのために設計された、Misskeyをより楽しめるツールを取り揃えています。",
+		"misshaiAlertTitle": "ミス廃アラート",
+		"misshaiAlertDescription": "Misskeyにのめり込んでいませんか？ミス廃アラートを使えば、毎日のMisskeyでの活動量を以下のように定期投稿できます。",
+		"misshaiRankingDescription": "ミス廃ランキングでは、Misskeyでの活動を数値化し、ランキング表示します。",
+		"nextFeaturesTitle": "今後も追加予定。",
+		"nextFeaturesDescription": "これだけではありません。今後もアップデートで様々な機能を追加します！"
+	},
 	"_nav": {
 		"data": "データ",
 		"ranking": "ランキング",
@@ -62,7 +71,8 @@
 		"dataScore": "スコア",
 		"dataDelta": "前日比",
 		"rating": "レート",
-		"order": "順位"
+		"order": "順位",
+		"showRanking": "ランキングを見る"
 	},
 	"_developerInfo": {
 		"title": "開発者",
