--- a/src/frontend/langs/ja-JP.json
+++ b/src/frontend/langs/ja-JP.json
@@ -59,6 +59,7 @@
 	},
 	"_nav": {
 		"misshai": "ミス廃",
+		"accounts": "アカウント",
 		"settings": "設定"
 	},
 	"_missHai": {
@@ -72,6 +73,11 @@
 		"rating": "レート",
 		"order": "順位",
 		"showRanking": "ランキングを見る"
+	},
+	"_accounts": {
+		"currentAccount": "現在ログインしているアカウント",
+		"switchAccount": "アカウント切り替え",
+		"useAnother": "他のアカウントで登録する"
 	},
 	"_developerInfo": {
 		"title": "開発者",
