--- a/src/frontend/langs/ja-JP.json
+++ b/src/frontend/langs/ja-JP.json
@@ -45,6 +45,8 @@
 	"upload": "アップロード",
 	"preview": "プレビュー",
 	"catAdjuster": "ねこみみアジャスター",
+	"shouldUpdateToken": "認証トークンの更新が必要です。更新しないと一部機能が正常に動作しません。",
+	"update": "更新する",
 	"_welcomeMessage": {
 		"pattern1": "ついついノートしすぎていませんか？",
 		"pattern2": "Misskey, しすぎていませんか？",
