ガチャ機能実装など

--- a/src/frontend/langs/ja-JP.json
+++ b/src/frontend/langs/ja-JP.json
@@ -133,7 +133,8 @@
 			"url": "本サイトのURL",
 			"username": "アカウントのユーザー名",
 			"host": "アカウントの所属ホスト名",
-			"rating": "レート"
+			"rating": "レート",
+			"gacha": "ガチャ"
 		}
 	},
 	"_error": {
