--- a/src/frontend/langs/ja-JP.json
+++ b/src/frontend/langs/ja-JP.json
@@ -52,6 +52,7 @@
 	"instanceUrlPlaceholder": "例：misskey.io",
 	"settings": "設定",
 	"accentColor": "アクセントカラー",
+	"changelog": "更新履歴",
 	"_sidebar": {
 		"dashboard": "ダッシュボード",
 		"tools": "ツール",
