設定画面を調整

--- a/src/frontend/langs/ja-JP.json
+++ b/src/frontend/langs/ja-JP.json
@@ -53,6 +53,7 @@
 	"settings": "設定",
 	"accentColor": "アクセントカラー",
 	"changelog": "更新履歴",
+	"otherSettings": "その他の設定",
 	"_sidebar": {
 		"dashboard": "ダッシュボード",
 		"tools": "ツール",
