対応言語を追加

--- a/src/frontend/langs/ja-JP.json
+++ b/src/frontend/langs/ja-JP.json
@@ -1,4 +1,5 @@
 {
+	"$languageName": "日本語",
 	"title": "Misskey Tools",
 	"description1": "Misskeyをもっと効果的に。様々な機能を持ったオールインワンツール。",
 	"description2": "お使いのインスタンスURLを入力して、今すぐMisskey Toolsを使おう！",
