--- a/packages/frontend/src/langs/ja-JP.json
+++ b/packages/frontend/src/langs/ja-JP.json
@@ -1,24 +1,28 @@
 {
 	"$languageName": "日本語",
 	"title": "Misskey Tools",
-	"description1": "Misskeyをもっと効果的に。様々な機能を持ったオールインワンツール。",
-	"description2": "お使いのサーバーURLを入力して、今すぐMisskey Toolsを使おう！",
+	"description": "Misskeyをもっと楽しく、もっと便利に。すべてのミスキストのためのオールインワンツール。",
+	"name": "名前",
 	"notes": "ノート",
 	"following": "フォロー",
 	"followers": "フォロワー",
 	"alertMode": "アラート送信方法",
+	"sendAsNote": "ノート",
 	"visibility": "公開範囲",
 	"appearance": "表示設定",
 	"template": "テンプレート",
 	"sendAlert": "アラートをテスト送信する",
 	"sendAlertDescription": "現在の設定を用いて、アラート送信をテストします。",
 	"sendAlertDisabled": "アラート送信方法が「通知しない」のため、送信をテストすることはできません。",
+	"login": "ログイン",
+	"loginWithMisskey": "Misskey でログイン",
 	"logout": "ログアウトする",
 	"logoutDescription": "ログアウトしても、アラートは送信されます。",
 	"deleteAccount": "アカウント連携を解除する",
 	"deleteAccountDescription": "Misskey Toolsのアカウントを削除します。これにより、Misskeyとの連携設定も解除されます。",
 	"instanceUrl": "サーバーURL",
-	"login": "ログイン",
+	"instanceUrlPlaceholder": "例：misskey.io",
+	"instanceUrlValidationError": "正しいURL文字列を入力してください。",
 	"localOnly": "連合なし",
 	"help": "ヘルプ",
 	"save": "保存",
@@ -31,47 +35,43 @@
 	"yes": "はい",
 	"no": "いいえ",
 	"termsOfService": "利用規約",
-	"name": "名前",
 	"resetToDefault": "初期値に戻す",
 	"error": "エラー",
 	"retry": "やり直す",
 	"saved": "保存しました。",
-	"disclaimerForMisskeyHq": "Misskey Toolsは、Misskey Development Divisionの公式ツールでは<b>ありません</b>。",
-	"translatedByTheCommunity": "Misskey Toolsはボランティアによって翻訳されています。",
+	"accounts": "アカウント",
+	"translatedByTheCommunity": "Misskey Toolsはコミュニティによって翻訳されています。あなたも翻訳に協力してみませんか？",
 	"helpTranslation": "翻訳に協力する",
+	"developedAsOpenSourceSoftware": "Misskey Toolsはオープンソースソフトウェアであり、誰でも開発にご協力いただけます。あなたも貢献してみませんか？",
 	"announcements": "お知らせ",
 	"upload": "アップロード",
 	"preview": "プレビュー",
-	"catAdjuster": "ねこみみアジャスター",
+	"dashboard": "ダッシュボード",
+	"missHaiAlert": "ミス廃アラート",
+	"avatarCropper": "アバタークロッパー",
+	"questionBox": "質問ボックス",
+	"followingManager": "フォローマネージャー",
+	"myPage": "マイページ",
 	"shouldUpdateToken": "認証トークンの更新が必要です。更新しないと一部機能が正常に動作しません。",
 	"update": "更新する",
 	"shareMisskeyTools": "#MisskeyTools をシェアする",
 	"shareMisskeyToolsNote": "#MisskeyTools はいいぞ\n\nhttps://misskey.tools",
-	"instanceUrlPlaceholder": "例：misskey.io",
 	"settings": "設定",
 	"accentColor": "アクセントカラー",
 	"changelog": "更新履歴",
 	"otherSettings": "その他の設定",
-	"_sidebar": {
-		"dashboard": "ダッシュボード",
-		"tools": "ツール",
-		"manageTools": "ツールを管理",
-		"missHaiAlert": "ミス廃アラート",
-		"cropper": "ねこみみアジャスター",
-		"accounts": "アカウント",
-		"settings": "設定",
-		"admin": "管理画面",
-		"return": "トップページに戻る"
-	},
+	"admin": "管理画面",
+
 	"_welcome": {
-		"title": "プロ仕様のツールキット",
-		"description": "Misskey Toolsでは、Misskeyのために設計された、Misskeyをより楽しめるツールを取り揃えています。",
 		"misshaiAlertTitle": "ミス廃アラート",
 		"misshaiAlertDescription": "Misskeyにのめり込んでいませんか？ミス廃アラートを使えば、毎日のMisskeyでの活動量を定期投稿できます。",
 		"misshaiRankingDescription": "ミス廃ランキングでは、Misskeyでの活動を数値化し、ランキング表示します。",
-		"catAdjusterDescription": "CATモードの猫耳がアイコンに合わなくてお悩みのあなたへ。かわいいアイコンを猫耳に合わせてトリミングできます。",
+		"avatarCropperDescription": "丸形、角丸形、そして猫耳のついた状態をプレビューしながら、アイコンを自在に切り抜けます。魅力的なアバターを、もっと魅力的に。",
+		"questionBoxDescription": "匿名で質問できるページを開設しよう。届いた質問には、お使いのMisskeyアカウントで回答できます。",
+		"followingManagerDescription": "増えすぎたフォロー・フォロワーを管理できる高機能なマネージャー。所属サーバーや、フォローバックされていないアカウントで絞り込むことができ、一括処理にも対応しています。",
 		"nextFeaturesTitle": "今後も追加予定。",
-		"nextFeaturesDescription": "これだけではありません。今後もアップデートで様々な機能を追加します！"
+		"nextFeaturesDescription": "これだけではありません。今後もアップデートで様々な機能を追加します！",
+		"myPageDescription": "お使いのMisskeyアカウントを含むリンク、自己紹介、開設した質問ボックスなどを設置し、自由にカスタマイズできるマイページを作ろう。作成したページはURL共有できます。"
 	},
 	"_missHai": {
 		"ranking": "ミス廃ランキング",
@@ -84,26 +84,14 @@
 		"rating": "レート",
 		"order": "順位",
 		"showRanking": "ランキングを見る",
-		"useRanking": "ランキングに参加する"
+		"useRanking": "ランキングに参加する",
+		"note": "自動的にノートとして投稿する",
+		"notification": "Misskeyに通知する",
+		"notificationWarning": "Misskeyのバージョンによっては動作しません。"
 	},
 	"_accounts": {
 		"switchAccount": "アカウント切り替え",
 		"useAnother": "他のアカウントで登録する"
-	},
-	"_developerInfo": {
-		"title": "開発者",
-		"description": "何か困ったことがあったら、以下のアカウントにメッセージを送ってください。"
-	},
-	"_timeline": {
-		"title": "タイムライン",
-		"description": "{{hashtag}} タグを含む最新ノートを表示します。"
-	},
-	"_alertMode": {
-		"note": "自動的にノートを投稿",
-		"notification": "Misskeyに通知(標準)",
-		"both": "両方",
-		"nothing": "通知しない",
-		"notificationWarning": "「Misskey に通知」オプションは古いMisskeyでは動作しません。"
 	},
 	"_visibility": {
 		"home": "ホーム",
@@ -135,9 +123,8 @@
 		}
 	},
 	"_error": {
-		"sorry": "問題が発生しました。お手数ですが、やり直してください。",
+		"sorry": "問題が発生しました。",
 		"additionalInfo": "追加情報: ",
-		"hitorisskeyIsDenied": "ひとりすきーは連携できません。",
 		"teapot": "I'm a teapot.",
 		"sessionRequired": "セッションがありません。",
 		"tokenRequired": "トークンがありません。",
