アカウントメニュー

--- a/packages/frontend/src/langs/ja-JP.json
+++ b/packages/frontend/src/langs/ja-JP.json
@@ -61,6 +61,8 @@
 	"changelog": "更新履歴",
 	"otherSettings": "その他の設定",
 	"admin": "管理画面",
+	"misskeyAccounts": "Misskey アカウント…",
+	"helpAndSupport": "ヘルプとサポート",
 
 	"_welcome": {
 		"misshaiAlertTitle": "ミス廃アラート",
